kube/node/node-service.yml
apiVersion: v1
kind: Service
metadata:
  name: v6proxy-subdomain
  namespace: vantage6-node
spec:
  selector:
    app: vantage6-node
  ports:
  - protocol: TCP
    port:  7654
    targetPort:  7654
